// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dashboard /> renders all teams with associated pokemon 1`] = `
Array [
  <h1
    className="Heading-sc-1a24dwr-0 eiJqiJ"
  >
    My Teams
  </h1>,
  <div
    className="SectionContainer-sc-1h7hs07-0 lhxZhT"
  >
    <div
      className="CenteredRow-sc-1446zpg-0 dFcFNQ"
    >
      <a
        className="Cta__CtaInternalLink-sc-1qsmnol-0 isVVbW"
        href="/team/create/"
        onClick={[Function]}
      >
        Create a team
      </a>
    </div>
    <div
      className="TeamGrid__CardGrid-sc-1wwzl6c-0 dDkaIx"
    >
      <article
        className="Card__CardWrapper-sc-1prdgex-0 hFLESf"
      >
        <header
          className="Card__CardHeader-sc-1prdgex-1 cVaHHk"
        >
          <h2
            className="CardHeading-esgf7h-0 hqHCZd"
          >
            Team 1
          </h2>
        </header>
        <div
          className="Card__CardContent-sc-1prdgex-2 cyIVmL"
        >
          <div
            className="CardMeta__CardMetaWrapper-sc-6wqr52-0 hgGiwQ"
          >
            <div
              className="CardMeta__CardMetaItem-sc-6wqr52-1 bDCDfU"
            >
              <span
                className="CardMeta__CardMetaLabel-sc-6wqr52-2 bZDTki"
              >
                Pkmn
              </span>
              <span
                className="CardMeta__CardMetaValue-sc-6wqr52-3 dquxYs"
              >
                2
              </span>
            </div>
            <div
              className="CardMeta__CardMetaItem-sc-6wqr52-1 bDCDfU"
            >
              <span
                className="CardMeta__CardMetaLabel-sc-6wqr52-2 bZDTki"
              >
                Created
              </span>
              <span
                className="CardMeta__CardMetaValue-sc-6wqr52-3 dquxYs"
              >
                8/6/18
              </span>
            </div>
          </div>
          <div
            className="PokemonLine__Row-z6g3b0-0 kgmVFY"
          >
            <img
              alt="bulbasaur sprite"
              className="PokemonLine__RowImage-z6g3b0-1 ewsyct"
              src="/sprites/1.png"
            />
            <div>
              <div
                className="PokemonLine__RowTitle-z6g3b0-2 huXkVG"
              >
                #1 Bulbasaur
              </div>
              <ul
                className="InlineList-bwsyp4-0 bKIwJu"
              >
                <li>
                  <span
                    className="TypeTag-sc-19epxam-0 dCWWOO"
                    type="GRASS"
                  >
                    GRASS
                  </span>
                </li>
                <li>
                  <span
                    className="TypeTag-sc-19epxam-0 daqRLF"
                    type="POISON"
                  >
                    POISON
                  </span>
                </li>
              </ul>
            </div>
          </div>
          <div
            className="PokemonLine__Row-z6g3b0-0 geQAmh"
          >
            <img
              alt="pikachu sprite"
              className="PokemonLine__RowImage-z6g3b0-1 ewsyct"
              src="/sprites/25.png"
            />
            <div>
              <div
                className="PokemonLine__RowTitle-z6g3b0-2 huXkVG"
              >
                #25 Pikachu
              </div>
              <ul
                className="InlineList-bwsyp4-0 bKIwJu"
              >
                <li>
                  <span
                    className="TypeTag-sc-19epxam-0 eoDTXf"
                    type="ELECTRIC"
                  >
                    ELECTRIC
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </article>
      <article
        className="Card__CardWrapper-sc-1prdgex-0 hFLESf"
      >
        <header
          className="Card__CardHeader-sc-1prdgex-1 dKVArw"
        >
          <h2
            className="CardHeading-esgf7h-0 hqHCZd"
          >
            Team 2
          </h2>
        </header>
        <div
          className="Card__CardContent-sc-1prdgex-2 cyIVmL"
        >
          <div
            className="CardMeta__CardMetaWrapper-sc-6wqr52-0 hgGiwQ"
          >
            <div
              className="CardMeta__CardMetaItem-sc-6wqr52-1 bDCDfU"
            >
              <span
                className="CardMeta__CardMetaLabel-sc-6wqr52-2 bZDTki"
              >
                Pkmn
              </span>
              <span
                className="CardMeta__CardMetaValue-sc-6wqr52-3 dquxYs"
              >
                3
              </span>
            </div>
            <div
              className="CardMeta__CardMetaItem-sc-6wqr52-1 bDCDfU"
            >
              <span
                className="CardMeta__CardMetaLabel-sc-6wqr52-2 bZDTki"
              >
                Created
              </span>
              <span
                className="CardMeta__CardMetaValue-sc-6wqr52-3 dquxYs"
              >
                8/6/18
              </span>
            </div>
          </div>
          <div
            className="PokemonLine__Row-z6g3b0-0 eLaVlL"
          >
            <img
              alt="charmander sprite"
              className="PokemonLine__RowImage-z6g3b0-1 ewsyct"
              src="/sprites/4.png"
            />
            <div>
              <div
                className="PokemonLine__RowTitle-z6g3b0-2 huXkVG"
              >
                #4 Charmander
              </div>
              <ul
                className="InlineList-bwsyp4-0 bKIwJu"
              >
                <li>
                  <span
                    className="TypeTag-sc-19epxam-0 lnMICI"
                    type="FIRE"
                  >
                    FIRE
                  </span>
                </li>
              </ul>
            </div>
          </div>
          <div
            className="PokemonLine__Row-z6g3b0-0 geQAmh"
          >
            <img
              alt="pikachu sprite"
              className="PokemonLine__RowImage-z6g3b0-1 ewsyct"
              src="/sprites/25.png"
            />
            <div>
              <div
                className="PokemonLine__RowTitle-z6g3b0-2 huXkVG"
              >
                #25 Pikachu
              </div>
              <ul
                className="InlineList-bwsyp4-0 bKIwJu"
              >
                <li>
                  <span
                    className="TypeTag-sc-19epxam-0 eoDTXf"
                    type="ELECTRIC"
                  >
                    ELECTRIC
                  </span>
                </li>
              </ul>
            </div>
          </div>
          <div
            className="PokemonLine__Row-z6g3b0-0 bqofpK"
          >
            <img
              alt="haunter sprite"
              className="PokemonLine__RowImage-z6g3b0-1 ewsyct"
              src="/sprites/93.png"
            />
            <div>
              <div
                className="PokemonLine__RowTitle-z6g3b0-2 huXkVG"
              >
                #93 Haunter
              </div>
              <ul
                className="InlineList-bwsyp4-0 bKIwJu"
              >
                <li>
                  <span
                    className="TypeTag-sc-19epxam-0 hDfxNn"
                    type="GHOST"
                  >
                    GHOST
                  </span>
                </li>
                <li>
                  <span
                    className="TypeTag-sc-19epxam-0 daqRLF"
                    type="POISON"
                  >
                    POISON
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </article>
    </div>
  </div>,
]
`;

exports[`<Dashboard /> when dashboard as incomplete/invalid data doesn't crash 1`] = `
Array [
  <h1
    className="Heading-sc-1a24dwr-0 eiJqiJ"
  >
    My Teams
  </h1>,
  <div
    className="SectionContainer-sc-1h7hs07-0 lhxZhT"
  >
    <div
      className="CenteredRow-sc-1446zpg-0 dFcFNQ"
    >
      <a
        className="Cta__CtaInternalLink-sc-1qsmnol-0 isVVbW"
        href="/team/create/"
        onClick={[Function]}
      >
        Create a team
      </a>
    </div>
    <div
      className="TeamGrid__CardGrid-sc-1wwzl6c-0 dDkaIx"
    >
      <article
        className="Card__CardWrapper-sc-1prdgex-0 hFLESf"
      >
        <header
          className="Card__CardHeader-sc-1prdgex-1 cVaHHk"
        >
          <h2
            className="CardHeading-esgf7h-0 hqHCZd"
          >
            Team 1
          </h2>
        </header>
        <div
          className="Card__CardContent-sc-1prdgex-2 cyIVmL"
        >
          <div
            className="CardMeta__CardMetaWrapper-sc-6wqr52-0 hgGiwQ"
          >
            <div
              className="CardMeta__CardMetaItem-sc-6wqr52-1 bDCDfU"
            >
              <span
                className="CardMeta__CardMetaLabel-sc-6wqr52-2 bZDTki"
              >
                Pkmn
              </span>
              <span
                className="CardMeta__CardMetaValue-sc-6wqr52-3 dquxYs"
              >
                2
              </span>
            </div>
            <div
              className="CardMeta__CardMetaItem-sc-6wqr52-1 bDCDfU"
            >
              <span
                className="CardMeta__CardMetaLabel-sc-6wqr52-2 bZDTki"
              >
                Created
              </span>
              <span
                className="CardMeta__CardMetaValue-sc-6wqr52-3 dquxYs"
              >
                8/6/18
              </span>
            </div>
          </div>
          <div
            className="PokemonLine__Row-z6g3b0-0 kgmVFY"
          >
            <img
              alt="bulbasaur sprite"
              className="PokemonLine__RowImage-z6g3b0-1 ewsyct"
              src="/sprites/1.png"
            />
            <div>
              <div
                className="PokemonLine__RowTitle-z6g3b0-2 huXkVG"
              >
                #undefined Bulbasaur
              </div>
              <ul
                className="InlineList-bwsyp4-0 bKIwJu"
              >
                <li>
                  <span
                    className="TypeTag-sc-19epxam-0 dCWWOO"
                    type="GRASS"
                  >
                    GRASS
                  </span>
                </li>
                <li>
                  <span
                    className="TypeTag-sc-19epxam-0 daqRLF"
                    type="POISON"
                  >
                    POISON
                  </span>
                </li>
              </ul>
            </div>
          </div>
          <div
            className="PokemonLine__Row-z6g3b0-0 geQAmh"
          >
            <img
              alt="undefined sprite"
              className="PokemonLine__RowImage-z6g3b0-1 ewsyct"
              src="/sprites/25.png"
            />
            <div>
              <div
                className="PokemonLine__RowTitle-z6g3b0-2 huXkVG"
              >
                #25 
              </div>
              <ul
                className="InlineList-bwsyp4-0 bKIwJu"
              >
                <li>
                  <span
                    className="TypeTag-sc-19epxam-0 eoDTXf"
                    type="ELECTRIC"
                  >
                    ELECTRIC
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </article>
      <article
        className="Card__CardWrapper-sc-1prdgex-0 hFLESf"
      >
        <header
          className="Card__CardHeader-sc-1prdgex-1 gOHdVf"
        >
          <h2
            className="CardHeading-esgf7h-0 hqHCZd"
          />
        </header>
        <div
          className="Card__CardContent-sc-1prdgex-2 cyIVmL"
        >
          <div
            className="CardMeta__CardMetaWrapper-sc-6wqr52-0 hgGiwQ"
          >
            <div
              className="CardMeta__CardMetaItem-sc-6wqr52-1 bDCDfU"
            >
              <span
                className="CardMeta__CardMetaLabel-sc-6wqr52-2 bZDTki"
              >
                Pkmn
              </span>
              <span
                className="CardMeta__CardMetaValue-sc-6wqr52-3 dquxYs"
              >
                3
              </span>
            </div>
            <div
              className="CardMeta__CardMetaItem-sc-6wqr52-1 bDCDfU"
            >
              <span
                className="CardMeta__CardMetaLabel-sc-6wqr52-2 bZDTki"
              >
                Created
              </span>
              <span
                className="CardMeta__CardMetaValue-sc-6wqr52-3 dquxYs"
              >
                8/6/18
              </span>
            </div>
          </div>
          <div
            className="PokemonLine__Row-z6g3b0-0 iAoBAe"
          >
            <img
              alt="undefined sprite"
              className="PokemonLine__RowImage-z6g3b0-1 ewsyct"
              src="/sprites/undefined"
            />
            <div>
              <div
                className="PokemonLine__RowTitle-z6g3b0-2 huXkVG"
              >
                #undefined 
              </div>
              <ul
                className="InlineList-bwsyp4-0 bKIwJu"
              />
            </div>
          </div>
          <div
            className="PokemonLine__Row-z6g3b0-0 geQAmh"
          >
            <img
              alt="pikachu sprite"
              className="PokemonLine__RowImage-z6g3b0-1 ewsyct"
              src="/sprites/25.png"
            />
            <div>
              <div
                className="PokemonLine__RowTitle-z6g3b0-2 huXkVG"
              >
                #25 Pikachu
              </div>
              <ul
                className="InlineList-bwsyp4-0 bKIwJu"
              >
                <li>
                  <span
                    className="TypeTag-sc-19epxam-0 eoDTXf"
                    type="ELECTRIC"
                  >
                    ELECTRIC
                  </span>
                </li>
              </ul>
            </div>
          </div>
          <div
            className="PokemonLine__Row-z6g3b0-0 iAoBAe"
          >
            <img
              alt="haunter sprite"
              className="PokemonLine__RowImage-z6g3b0-1 ewsyct"
              src="/sprites/93.png"
            />
            <div>
              <div
                className="PokemonLine__RowTitle-z6g3b0-2 huXkVG"
              >
                #93 Haunter
              </div>
              <ul
                className="InlineList-bwsyp4-0 bKIwJu"
              />
            </div>
          </div>
        </div>
      </article>
    </div>
  </div>,
]
`;

exports[`<Dashboard /> when dashboard has no data renders correctly 1`] = `
Array [
  <h1
    className="Heading-sc-1a24dwr-0 eiJqiJ"
  >
    My Teams
  </h1>,
  <div
    className="SectionContainer-sc-1h7hs07-0 lhxZhT"
  >
    <div
      className="CenteredRow-sc-1446zpg-0 dFcFNQ"
    >
      <a
        className="Cta__CtaInternalLink-sc-1qsmnol-0 isVVbW"
        href="/team/create/"
        onClick={[Function]}
      >
        Create a team
      </a>
    </div>
    <div
      className="TeamGrid__CardGrid-sc-1wwzl6c-0 dDkaIx"
    />
  </div>,
]
`;

exports[`<Dashboard /> when dashboard is loading renders correctly 1`] = `
Array [
  <h1
    className="Heading-sc-1a24dwr-0 eiJqiJ"
  >
    My Teams
  </h1>,
  <div
    className="SectionContainer-sc-1h7hs07-0 lhxZhT"
  >
    <div
      className="CenteredRow-sc-1446zpg-0 dFcFNQ"
    >
      <a
        className="Cta__CtaInternalLink-sc-1qsmnol-0 isVVbW"
        href="/team/create/"
        onClick={[Function]}
      >
        Create a team
      </a>
    </div>
  </div>,
]
`;
